<?xml version="1.0"?>
<package format="2">
  <name>mrRai_sim</name>
  <version>0.0.0</version>
  <description> This class contain Mri simulation for gazebo simulation</description>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>raisim</build_depend>
  <build_depend>raisim_ogre</build_depend>


</package>
